# reflections

./: Cargo.toml  Makefile  README.md
src/: approximation.rs  approximators.rs  article.js  embed.html  index.html  lib.js  lib.rs  main.css  main.html  main.js  parser.rs  reflectors.rs  sampling.rs  spatial.rs  webserver.py
