[package]
name = "reflections"
version = "0.1.0"
authors = ["varkor <github@varkor.com>"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
wasm-bindgen = "0.2.21"
serde = "1.0.80"
serde_json = "1.0"
spade = "1.4.0"
console_error_panic_hook = "0.1.5"

[patch.crates-io]
spade = { git = "https://github.com/varkor/spade.git", branch = "ext" }
