[package]
name = "reflections"
version = "0.1.0"
authors = ["varkor <github@varkor.com>"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
console_error_panic_hook = "0.1.5"
num-traits = "0.2.6"
rstar = "0.4.0"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
wasm-bindgen = "0.2.21"
